Updating the field-detail to display text / update area with provision of edit button and template changes

--- a/app/field-detail.component.html
+++ b/app/field-detail.component.html
@@ -1,46 +1,52 @@
-
-    <div>
+<!--Input / Output Field-->
+<div>
+    <span *ngIf="!isEditing">
         <span *ngIf="field.isInput">Input</span>
         <span *ngIf="!field.isInput">Output</span>
-    </div>
-    <div>
-        <span>{{field.name}}</span>
-        
-    </div>
-    <div>
-        <span>{{field.type}}</span>
-        
-    </div>
-    <div>
-        <span>{{field.defaultValue}}</span>
-        
-    </div>
-    <div>
-        
-        <span>{{field.length}}</span>
-    </div>
-<!--<div class="ruleComponent" [ngClass]="{'deletingRule': isPrepForDelete }">
-    <div>
-    <input  type="checkbox" [(ngModel)]="field.isInput" />
-    <span class="chkDisplay">Input</span>
-   
-    <input type="text" placeholder="Field Name" [(ngModel)]="field.name" />
-   
-    <select [(ngModel)]="field.type" required>
+    </span>
+    <span *ngIf="isEditing"> 
+        <input type="checkbox" [(ngModel)]="field.isInput" />
+        <span class="chkDisplay">Input</span>
+    </span>
+</div>
+
+<!--Field Name-->
+<div>
+    <span *ngIf="!isEditing">{{field.name}}</span>
+    <input *ngIf="isEditing" type="text" placeholder="Field Name" [(ngModel)]="field.name" />
+</div>
+
+<!--Field Type-->
+<div>
+    <span *ngIf="!isEditing">{{field.type}}</span>
+    <select *ngIf="isEditing" [(ngModel)]="field.type" required>
         <option *ngFor="let type of types" value="{{type.id}}">{{type.value}}</option>
     </select>
-    <input type="text" placeholder="Default Value" [(ngModel)]="field.defaultValue" />
-    <input type="number" placeholder="Start Position" [(ngModel)]="field.startPosition"/>
-    <input type="number" placeholder="Field Length" [(ngModel)]="field.length"/>
-       <div style="padding-right: 10px;">
-            <span style="padding-top: 10px;" >
-            <input *ngIf="!isPrepForDelete"  type="button" value="X" (click)="deleteField()" class="deleteRule"/>
-            </span>
-            <span *ngIf="isPrepForDelete" >
-                <span class="deleteRuleWarning">Delete!?</span>
-                <input (click)="confirmDelete(field)" type="button" value="Y" />
-                <input (click)="isPrepForDelete = !isPrepForDelete" type="button" value="N" />
-            </span>
-         </div>
-    </div>
-</div>-->
+</div>
+
+<!--Default Value-->
+<div>
+    <span *ngIf="!isEditing">{{field.defaultValue}}</span>
+    <input *ngIf="isEditing" type="text" placeholder="Default Value" [(ngModel)]="field.defaultValue" />
+</div>
+
+<!--Field Start Position-->
+<div>
+    <span *ngIf="!isEditing">{{field.startPosition}}</span>
+    <input *ngIf="isEditing" type="number" placeholder="Start Position" [(ngModel)]="field.startPosition" />
+</div>
+
+<!--Field Length-->
+<div>
+    <span *ngIf="!isEditing">{{field.length}}</span>
+    <input *ngIf="isEditing" type="number" placeholder="Field Length" [(ngModel)]="field.length" />
+</div>
+
+<!--Edit / Update Buttons-->
+<div>
+    <button *ngIf="!isEditing" (click)="editField(field)" type="button">Edit</button>
+    <span *ngIf="isEditing">
+        <button  type="button">Save</button>
+        <button (click)="cancelEdit()" type="button">Cancel</button>
+    </span>
+</div>
