--- a/app/fields.component.html
+++ b/app/fields.component.html
@@ -16,10 +16,16 @@
                 Type
             </div>
             <div>
+               Default Value
+            </div>
+            <div>
                 Start Position
             </div>
             <div>
                 Length
+            </div>
+            <div>
+                Edit/Update
             </div>
         </div>
         <!--<div class="tableBody" *ngFor="let field of fields">-->
