Styling for branding

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,6 +1,15 @@
 <main>
     <!--<create-rules></create-rules>-->
-    <header class="banner">Conversions File Generator</header>
+   
+    <header class="banner">
+         <img src="thomson-reuters-logo.png" style="
+    height: 40px;
+    vertical-align: middle;
+    float: left;
+"/>
+Conversions File Generator
+      
+    </header>
     <nav>
         <a routerLink="/home">Home</a>
         <a routerLink="/fields/create">Add Fields</a>
