--- a/app/fields.component.html
+++ b/app/fields.component.html
@@ -29,7 +29,7 @@
             </div>
         </div>
         <!--<div class="tableBody" *ngFor="let field of fields">-->
-                <field-detail class="tableBody"  *ngFor="let field of fields" [field]="field" (onremovefield)="removeFieldEventHandler($event)"></field-detail>
+                <field-detail class="tableBody"  *ngFor="let field of fields" [field]="field" [isInCreateMode]="!isInEditMode" (onremovefield)="removeFieldEventHandler($event)"></field-detail>
            
         <!--</div>-->
     </div>
