making the menu system dynamic and having the links highlighted based on the menu selected

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -11,11 +11,12 @@ Conversions File Generator
       
     </header>
     <nav>
-        <a routerLink="/home">Home</a>
+        <a *ngFor="let menu of menuItems" [ngClass]="{'selectedMenu': menu.isSelected }" routerLink="{{menu.routerLink}}" (click)="selectedMenu(menu)" >{{menu.displayText}}</a>
+        <!--<a routerLink="/home" >Home</a>
         <a routerLink="/fields/create">Add Fields</a>
         <a routerLink="/fields/edit"> Edit Fields</a>
         <a routerLink="/rules/create">Create Rules</a>
-        <a routerLink="/rules/edit">Edit Rules</a>
+        <a routerLink="/rules/edit">Edit Rules</a>-->
         <a>Help</a>
     </nav>
     <router-outlet></router-outlet>
