--- a/styles.css
+++ b/styles.css
@@ -83,16 +83,17 @@ body{
     margin:1px;
 }
 h2{
-          text-align: center;
-    color: white;
-    background: linear-gradient(#0D47A1,#1976D2);
+        text-align: center;
+    color: black;
+    background: linear-gradient(#FB8C00,#E65100);
     line-height: 29px;
     margin: 0px;
     font-size: 18px;
     font-weight: normal;
+    opacity: 0.75;
 }
 nav{
-              line-height: 30px;
+              line-height: 23px;
     border: 2px solid #0D47A1;
     border-left: 0px;
     border-right: 0px;
@@ -110,6 +111,7 @@ nav > a {
         cursor: pointer;
             border-top-left-radius: 9px;
     border-top-right-radius: 9px;
+    margin:0px 10px;
 }
 nav > a:hover{
         background-color: #BBDEFB;
@@ -152,4 +154,8 @@ pre{
 .btnTransparent{
         border: none;
     background-color: transparent;
+}
+.selectedMenu{
+    background: linear-gradient(#FF9800,#E65100); 
+    box-shadow: -4px -4px 3px black;
 }
