--- a/app/rules.component.html
+++ b/app/rules.component.html
@@ -7,7 +7,7 @@
 </div>
 <form (ngSubmit) = "onsubmit()">
 <section *ngIf="rules.length === 0 && !isInEditMode">
-    <em>Click on the + Rule button to get started</em>
+    <h3>Click on the + Rule button to get started</h3>
 </section>
 <section *ngIf="rules.length > 0" class='rulesContainer' >
     
